# mitre-assistant

./: .gitignore  404.html  Cargo.toml  README.md  all_malware.csv  heat.lazarus.csv  index.html  lazarus-profile.csv  lazarus_techniques.txt  log  malware_list.csv  matches_1.txt  matches_2.txt  matches_3.txt  matches_5.txt  mitre-assistant.csv  out.txt  t.txt  test.rs  tools_list.csv
baseline-sample/: baseline-enterprise.json
csv_examples/: ds.csv  stats.csv  xref_ds-platforms.csv
datasamples/: lazarus_techniques.txt  tactics.txt  techniques.txt
datasamples/adversaries/: t.json
datasamples/adversary_profiles/: admin@338.json  apt-c-36.json  apt1.json  apt12.json  apt16.json  apt17.json  apt18.json  apt19.json  apt28.json  apt29.json  apt3.json  apt30.json  apt32.json  apt33.json  apt37.json  apt38.json  apt39.json  apt41.json  axiom.json  blackoasis.json  blacktech.json  blue-mockingbird.json  bronze-butler.json  carbanak.json  charming-kitten.json  chimera.json  cleaver.json  cobalt-group.json  copykittens.json  dark-caracal.json  darkhotel.json  darkhydrus.json  darkvishnya.json  deep-panda.json  dragonfly.json  dragonok.json  dust-storm.json  elderwood.json  equation.json  fin10.json  (+66 more)
datasamples/backend/: baseline-enterprise-legacy.json  baseline-enterprise.json
datasamples/baseline-sample/: baseline-enterprise.json
datasamples/csv_examples/: all_adversaries_v8.csv  deprecated.csv  master_v8_windows_enterprise_techniques.csv  platforms.csv  rek.csv  revoked.csv  t.csv  (+1 more)
docs/: 404.html  index.html  sitemap.xml
helper-scripts/: build-site.sh
search/: search_index.json
src/: main.rs
src-mkdocs-mitre-assistant/: mkdocs.yml
(+382 files in other folders)
